homework2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw2-service
spec:
  selector:
    app: otus-hw2
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
